# full-stack-rust

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
backend/: Cargo.toml  build.rs  tauri.conf.json
backend/src/: main.rs  state.rs
backend_macros/: Cargo.toml
backend_macros/src/: lib.rs
command_macros/: Cargo.toml
command_macros/src/: lib.rs
commands/: Cargo.toml
commands/src/: lib.rs
common/: Cargo.toml
common/src/: commands.rs  lib.rs
db/: Cargo.toml  build.rs
db/src/: db.rs  id.rs  lib.rs  quote.rs
frontend/: Cargo.toml  index.html  main.scss
frontend/src/: main.rs  state.rs
frontend/src/components/: app.rs  greeting.rs  mod.rs  quote.rs
frontend/src/hooks/: mod.rs  use_async.rs
frontend_macros/: Cargo.toml
frontend_macros/src/: lib.rs
macro_utils/: Cargo.toml
macro_utils/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs
migration/src/migrations/: _0_0_0.rs  _0_0_1.rs  _0_1_0.rs  _1_0_0.rs  mod.rs
migration_macros/: Cargo.toml
migration_macros/src/: lib.rs  version.rs
