[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
commands = { path = "../commands" }
frontend_macros = { path = "../frontend_macros" }
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
js-sys = { version = "0.3.60" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = { version = "0.4" }
wasm-bindgen = { version = "0.2.83" }
wasm-bindgen-futures = { version = "0.4.33" }
web-sys = { version = "0.3.60", features = ["Window"] }
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9"
yew-hooks = "0.2.0"
