[package]
name = "macro_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = { version = "0.3.60", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = { version = "0.4", optional = true }
tauri = { version = "1.2.4", features = [], optional = true }
wasm-bindgen = { version = "0.2.83", optional = true }
wasm-bindgen-futures = { version = "0.4.33", optional = true }
web-sys = { version = "0.3.60", features = ["Window"], optional = true }

[features]
frontend = ["dep:js-sys", "dep:serde-wasm-bindgen", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]
backend = ["dep:tauri"]
